examples/tests/semantic/fail/incompatibleReturnType.tig
let 
    function wrong_function_return_type() : int = 
    "hello world"
in 
end 
